tests/ui/wrong-type-span.stderr
error[E0308]: mismatched types
 --> $DIR/wrong-type-span.rs:6:20
  |
6 |     quote_spanned!(span=> #x);
  |     ---------------^^^^-------
  |     |              |
  |     |              expected struct `proc_macro2::Span`, found `&str`
  |     expected due to this
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
